When deleting messages from the mail queue, Webmin will prompt for confirmation first.
Multiple values can now be entered and edited for the SMTP port options.
---- Changes since 1.240 ----
Added an option to the Sendmail Options page for selecting the order in which the mail queue is processed. This same option also appears on the Module Config page, for use when the queue is manually flushed.
When creating an autoreply alias, you can enter regexps that the headers will be checked against to prevent the reply.
When viewing an individual message in the mail queue, there is now a button for flushing just that email.
---- Changes since 1.250 ----
Multiple Sendmail PID files can be specified on the Module Config page, for systems using Mailscanner (which runs two Sendmail daemons).
Added a Module Config option to display aliases and other tables in one column instead of two, to increase readability when long aliases or domain names exist.
On the aliases, address mappings and other list pages, multiple entries can be deleted at once using the new checkboxes and Delete Selected button.
---- Changes since 1.290 ----
Mail aliases, address mappings, domain mappings, spam control rules and domain routings can now all have human-readable descriptions associated with them. These are stored as comments in the appropriate Sendmail config file.
Cleaned up the code and UIs for all mapping lists, to fit in better with the Webmin style and to support proper deletion/modification of multiple records.
---- Changes since 1.300 ----
The count of messages in the mail queue on the module's main page no longer includes those that the current user does not have access to.
Added access control for the Spam Control page.
---- Changes since 1.390 ----
Added a Module Config option to support ~/Maildir mailboxes (even though Sendmail doesn't support this natively).
Added an option to show the directory queued messages are in, which is useful on systems with several queues.