@@ -28,3 +28,4 @@ manual=1
 qdomsmode=2
 flushq=1
 smode=1
+ports=1
