@@ -603,6 +603,7 @@ file_emode=Unknown mode!
 file_err=Failed to edit file
 
 acl_opts=Can edit sendmail options?
+acl_ports=Can edit network ports?
 acl_cws=Can edit local domains?
 acl_masq=Can configure domain masquerading?
 acl_trusts=Can edit trusted users?
@@ -668,6 +669,7 @@ acl_usersu=With UID in range
 acl_spam=Spam control addresses this user can edit
 
 log_opts=Changed sendmail options
+log_ports=Change network ports
 log_alias_create=Created alias $1
 log_alias_modify=Modified alias $1
 log_alias_delete=Deleted alias $1
@@ -803,3 +805,27 @@ restart_ekill=Failed to signal sendmail processes : $1
 
 start_err=Failed to start sendmail
 start_ecannot=You are not allowed to start sendmail
+
+ports_title=Network Ports
+ports_name=Port name
+ports_addr=Listen on address
+ports_all=All
+ports_ip=IP
+ports_port=Listen on port
+ports_opts=Port options
+ports_mod_a=Require SMTP authentication
+ports_mod_b=Use same interface for outgoing email
+ports_mod_c=Rerform hostname canonification
+ports_mod_f=Require fully qualified hostname
+ports_mod_h=Use name of interface for HELO
+ports_mod_C=Don't perform hostname canonification
+ports_mod_E=Disallow ETRN
+ports_def1=Accept email on port 25 and all addresses
+ports_def0=Accept email only on ports below ..
+ports_err=Failed to save network ports
+ports_ecannot=You are not allowed to manage network ports
+ports_ename=Invalid port name in row $1
+ports_eclash=Duplicate port name in row $1
+ports_eaddress=Missing or invalid IP address in row $1
+ports_eport=Missing or invalid port number in row $1
+
